changed stars for M

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-icon"><img src="assets/img/portfolio/m-white.png" alt="M"></div>
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
@@ -74,7 +74,7 @@
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-icon"><img src="assets/img/portfolio/m-white.png" alt="M"></div>
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- About Section Content-->
@@ -102,7 +102,7 @@
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-icon"><img src="assets/img/portfolio/m-black.png" alt="M"></div>
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Grid Items-->
@@ -176,7 +176,7 @@
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-icon"><img src="assets/img/portfolio/m-white.png" alt=""></div>
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Contact Section Content-->
@@ -244,7 +244,7 @@
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
-                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-icon"><img src="assets/img/portfolio/m-black.png" alt="M"></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
@@ -279,7 +279,7 @@
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
-                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-icon"><img src="assets/img/portfolio/m-black.png" alt="M"></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
@@ -314,7 +314,7 @@
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
-                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-icon"><img src="assets/img/portfolio/m-black.png" alt="M"></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
@@ -323,7 +323,6 @@
                                     <p class="mb-5">Strelitzia Reginae is a site about the plant Strelitzia Reginae (paradise bird plant). It was made for an bootstrap exercise. </p>
                                     <div class="text-center mb-5">
                                         <a class="btn btn-xl btn-outline-primary" href="https://strelitzia-reginae.netlify.app/" target="_blank">
-                                            <i class="fas fa-star mr-2"></i>
                                             Take a look!
                                         </a>
                                     </div>
@@ -355,7 +354,7 @@
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
-                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-icon"><img src="assets/img/portfolio/m-black.png" alt="M"></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
@@ -369,7 +368,7 @@
                                     </ul>
                                     <div class="text-center mb-5">
                                         <a class="btn btn-xl btn-outline-primary" href="https://mb-design.netlify.app/" target="_blank">
-                                            <i class="fas fa-star mr-2"></i>
+                                            <img src="assets/img/portfolio/m-black.png" alt="M">
                                             Take a look!
                                         </a>
                                     </div>
@@ -401,7 +400,7 @@
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
-                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-icon"><img src="assets/img/portfolio/m-black.png" alt="M"></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
@@ -436,7 +435,7 @@
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
-                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-icon"><img src="assets/img/portfolio/m-black.png" alt="M"></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
