--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5 rounded" src="assets/img/portfolio/avatar.png" alt="" />
+                <img class="masthead-avatar mb-5 rounded" src="assets/img/portfolio/avatar.png" alt="Profile-Avatar" />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Michael Baeyens</h1>
                 <!-- Icon Divider-->
@@ -113,7 +113,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/1City_Skylines.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/1City_Skylines.png" alt="Skyline Website" />
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
@@ -122,7 +122,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/2minimal.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/2minimal.png" alt="Minimal Website" />
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
@@ -131,7 +131,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/3strelitzia_reginae.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/3strelitzia_reginae.png" alt="Paradise Plant Website" />
                         </div>
                     </div>
                     <!-- Portfolio Item 4-->
@@ -140,7 +140,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/4skills.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/4skills.png" alt="CV Skills Website" />
                         </div>
                     </div>
                     <!-- Portfolio Item 5-->
@@ -149,7 +149,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/5Graffiti_Spotter.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/5Graffiti_Spotter.png" alt="Graffiti Spotter Website" />
                         </div>
                     </div>
                     <!-- Portfolio Item 6-->
@@ -158,7 +158,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/6more_comming_soon.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/6more_comming_soon.png" alt="More comming soon" />
                         </div>
                     </div>
                 </div>
@@ -176,7 +176,7 @@
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><img src="assets/img/portfolio/m-white.png" alt=""></div>
+                    <div class="divider-custom-icon"><img src="assets/img/portfolio/m-white.png" alt="M"></div>
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Contact Section Content-->
@@ -248,7 +248,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/1City_Skylines.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/1City_Skylines.png" alt="Skyline Website" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">City Skylines is one of my first local sites. In this site i use <span style="color:#1ABC9C">grid layout</span> wich i love to work with. </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
@@ -283,7 +283,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/2minimal.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/2minimal.png" alt="Minimal Website" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">Minimal is a local site wich i made for fun. It includes some minimal pictures, special layouts, etc...</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
@@ -318,7 +318,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/3strelitzia_reginae.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/3strelitzia_reginae.png" alt="Paradise Flower Website" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">Strelitzia Reginae is a site about the plant Strelitzia Reginae (paradise bird plant). It was made for an bootstrap exercise. </p>
                                     <div class="text-center mb-5">
@@ -358,7 +358,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/4skills.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/4skills.png" alt="CV Skills Website" />
                                     <!-- Portfolio Modal - Text-->
                                     <p>Mb-Design is my CV site it has more info about: </p>
                                     <ul class="mb-3 text-left">
@@ -404,7 +404,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/5Graffiti_Spotter.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/5Graffiti_Spotter.png" alt="Graffiti Spotter Website" />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">Graffiti Spotter is a (currently local) site where people can share graffiti wich they have seen anywhere in the world! Also people can upload works they made themself.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
@@ -439,7 +439,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/6more_comming_soon.png" alt="" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/6more_comming_soon.png" alt="More Comming Soon" />
                                     <!-- Portfolio Modal - Text-->
                                     <p>Didn't get enough?</p>
                                     <p class="mb-5">More works will be added here shortly!</p>
