added Architecto switched image layout

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/1City_Skylines.png" alt="Skyline Website" />
+                            <img class="img-fluid" src="assets/img/portfolio/preview/City_Skylines-preview.png" alt="Skyline Website" />
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
@@ -122,7 +122,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/2minimal.png" alt="Minimal Website" />
+                            <img class="img-fluid" src="assets/img/portfolio/preview/minimal-preview.png" alt="Minimal Website" />
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
@@ -131,7 +131,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/3strelitzia_reginae.png" alt="Paradise Plant Website" />
+                            <img class="img-fluid" src="assets/img/portfolio/preview/strelitzia_reginae-preview.png" alt="Paradise Plant Website" />
                         </div>
                     </div>
                     <!-- Portfolio Item 4-->
@@ -140,7 +140,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/4skills.png" alt="CV Skills Website" />
+                            <img class="img-fluid" src="assets/img/portfolio/preview/skills-preview.png" alt="CV Skills Website" />
                         </div>
                     </div>
                     <!-- Portfolio Item 5-->
@@ -149,16 +149,25 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/5Graffiti_Spotter.png" alt="Graffiti Spotter Website" />
+                            <img class="img-fluid" src="assets/img/portfolio/preview/Graffiti_Spotter-preview.png" alt="Graffiti Spotter Website" />
                         </div>
                     </div>
                     <!-- Portfolio Item 6-->
-                    <div class="col-md-6 col-lg-4">
+                    <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/6more_comming_soon.png" alt="More comming soon" />
+                            <img class="img-fluid" src="assets/img/portfolio/preview/architecto-preview.png" alt="Architecto Website" />
+                        </div>
+                    </div>
+                    <!-- Portfolio Item 7-->
+                    <div class="col-md-6 col-lg-4 mt-md-5 mb-md-0">
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal7">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/portfolio/preview/more_comming_soon-preview.png" alt="More comming soon" />
                         </div>
                     </div>
                 </div>
@@ -418,9 +427,53 @@
                 </div>
             </div>
         </div>
+
         <!-- Portfolio Modal 6-->
 
         <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-labelledby="portfolioModal6Label" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
+                <div class="modal-content">
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                    <div class="modal-body text-center">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Portfolio Modal - Title-->
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal5Label">Graffiti Spotter</h2>
+                                    <!-- Icon Divider-->
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                        <div class="divider-custom-icon"><img src="assets/img/portfolio/m-black.png" alt="M"></div>
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                    <!-- Portfolio Modal - Image-->
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/architecto.png" alt="Architecto Website" />
+                                    <!-- Portfolio Modal - Text-->
+                                    <p class="mb-5">Architecto is a website about a made up architect company.</p>
+                                    <div class="text-center mb-5">
+                                        <a class="btn btn-xl btn-outline-primary" href="https://architecto.netlify.app/" target="_blank">
+                                            Take a look!
+                                        </a>
+                                    </div>
+                                    <button class="btn btn-primary" data-dismiss="modal">
+                                        <i class="fas fa-times fa-fw"></i>
+                                        Close Window
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <!-- Portfolio Modal 7-->
+
+        <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-labelledby="portfolioModal6Label" aria-hidden="true">
             <div class="modal-dialog modal-xl" role="document">
                 <div class="modal-content">
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
