Changed 1-3 to new content

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/preview/City_Skylines-preview.png" alt="Skyline Website" />
+                            <img class="img-fluid" src="assets/img/portfolio/preview/ToDoList preview.png" alt="To Do List Design" />
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
@@ -122,7 +122,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/preview/minimal-preview.png" alt="Minimal Website" />
+                            <img class="img-fluid" src="assets/img/portfolio/preview/ContactPage Preview.png" alt="Design of a contact page I made" />
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
@@ -131,7 +131,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/preview/strelitzia_reginae-preview.png" alt="Paradise Plant Website" />
+                            <img class="img-fluid" src="assets/img/portfolio/preview/Remade Website preview.png" alt="Remade EDU website" />
                         </div>
                     </div>
                     <!-- Portfolio Item 4-->
@@ -209,9 +209,9 @@
                 <!-- Contact Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ml-auto"><p class="lead">
-                    If you have any questions...
+                    If you have any questions,
                     <br>
-                    Feel free to ask me</p></div>
+                    feel free to contact me!</p></div>
                     <div class="col-lg-4 mr-auto"><p class="lead">
                     You can contact me on: 
                     <br>
@@ -267,7 +267,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">City Skylines</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">To Do List App</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -275,9 +275,13 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/1City_Skylines.png" alt="Skyline Website" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/ToDoList Design2.png" alt="Design ToDoList" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/ToDoList Life Design1.1.png" alt="Design ToDoList" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/ToDoList Work Design1.2.png" alt="Design ToDoList" />
+                                    
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">City Skylines is one of my first local sites. In this site i use <span style="color:#1ABC9C">grid layout</span> wich i love to work with. </p>
+                                    <p class="mb-5">These are two different designs I made for a <span style="color:#1ABC9C">To Do List </span> app.</p>
+                                
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -302,7 +306,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">Minimal</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">M-IMMO website</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -310,9 +314,11 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/2minimal.png" alt="Minimal Website" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Part of Homepage.png" alt="Homepage of an immobilien site I made" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Page 3 Contact page.png" alt="A contact page of an immobilien site" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Page 3.2 Contact page with open contact form.png" alt="A contact page of an immobilien site with open contact form" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Minimal is a local site wich i made for fun. It includes some minimal pictures, special layouts, etc...</p>
+                                    <p class="mb-5">A design i made for an Immo site. Logo + Website</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -337,7 +343,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">Strelitzia Reginae</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">Remake Website</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -345,14 +351,16 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/3strelitzia_reginae.png" alt="Paradise Flower Website" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Remade website.png" alt="EDU website I remade from scratch " />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Remade2.1.png" alt="Smashingmagazine website I remade from scratch" />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Remade2.2.png" alt="Smashingmagazine website I remade from scratch" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Strelitzia Reginae is a site about the plant Strelitzia Reginae (paradise bird plant). It was made for an bootstrap exercise. </p>
-                                    <div class="text-center mb-5">
+                                    <p class="mb-5">I remade alot of websites from scratch. These are some examples. </p>
+                                    <!-- <div class="text-center mb-5">
                                         <a class="btn btn-xl btn-outline-primary" href="https://strelitzia-reginae.netlify.app/" target="_blank">
                                             Take a look!
                                         </a>
-                                    </div>
+                                    </div> -->
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
