--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <!-- https://www.seosos.nl/meta-tags-generator -->
+        <meta name="title" content="Michael Baeyens - Portfolio Website">
+        <meta name="description" content="Welkom op de portfolio website van Michael Baeyens.">
+        <meta name="keywords" content="portfolio, portfolio website, michael, baeyens, michael baeyens, web developer, web designer, front-end developer, front end web developer, front-end web developer, ui ux, ui, ux, web development, mb-design">
+        <meta name="robots" content="index, follow">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="language" content="Dutch">
+        <meta name="author" content="Michael Baeyens">
+
         <title>Michael Baeyens</title>
         <!-- Tab icon-->
         <link rel="icon" type="image/x-icon" href="assets/img/tab-img.png" />
@@ -81,11 +88,11 @@
                 <div class="row">
                     <div class="col-lg-4 ml-auto"><p class="lead font-big">Hello, I'm
                     Michael Baeyens!</p></div>
-                    <div class="col-lg-4 mr-auto"><p class="lead">With a passion for web developement and web design , I have both the skill set and professional education necessary to dive deep into the world of web.</p></div>
+                    <div class="col-lg-4 mr-auto"><p class="lead">With a passion for web development and web design , I have both the skill set and professional education necessary to dive deep into the world of web.</p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="assets/cv/CV Michael Baeyens English.pdf" download>
+                    <a class="btn btn-xl btn-outline-light" href="assets/cv/CV Michael Baeyens English 2022.pdf" download>
                         <i class="fas fa-download mr-2"></i>
                         Download my CV!
                     </a>
@@ -162,7 +169,7 @@
                         </div>
                     </div>
                     <!-- Portfolio Item 7-->
-                    <div class="col-md-6 col-lg-4 mt-md-5 mb-md-0">
+                    <div class="col-md-6 col-lg-4 mb-5 mt-md-5 mb-md-0">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal7">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
@@ -171,7 +178,7 @@
                         </div>
                     </div>
                     <!-- Portfolio Item 8-->
-                    <div class="col-md-6 col-lg-4 mt-md-5 mb-md-0">
+                    <div class="col-md-6 col-lg-4 mb-5 mt-md-5 mb-md-0">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal8">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
@@ -180,7 +187,7 @@
                         </div>
                     </div>
                     <!-- Portfolio Item 9-->
-                    <div class="col-md-6 col-lg-4 mt-md-5 mb-md-0">
+                    <div class="col-md-6 col-lg-4 mb-5 mt-md-5 mb-md-0">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal9">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
