--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="assets/cv/CV Michael Baeyens English 2022.pdf" download>
+                    <a class="btn btn-xl btn-outline-light" href="assets/cv/CV Michael Baeyens.pdf" download>
                         <i class="fas fa-download mr-2"></i>
                         Download my CV!
                     </a>
